apps/foo/manifests.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: default
  labels:
    app: foo
spec:
  selector:
    app: foo
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: default
  labels:
    app: foo
spec:
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      serviceAccountName: foo
      containers:
        - name: foo
          image: foo:latest
          ports:
            - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: "foo"
spec:
  ingressClassName: nginx
  rules:
    - host: foo.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foo
                port:
                  number: 80
---
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: foo-root-route
  namespace: default
spec:
  parentRefs:
    - name: foo
      kind: Service
      group: core
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
